<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_gris"
    tools:context=".gui.MainActivity">

    <Button
        android:id="@+id/btnCronograma"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnSiguienteCronograma"
        android:text="@string/cronograma"
        android:textColor="@color/colorFondos" />

    <Button
        android:id="@+id/btnNotas"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="1dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnSiguienteNots"
        android:text="@string/notas"
        android:textColor="@color/colorFondos" />

    <Button
        android:id="@+id/btnPlanAcademico"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="125dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="btnSiguienteSemestre"
        android:text="@string/planAcademico"
        android:textColor="@color/colorFondos" />

    <TextView
        android:id="@+id/appTitulo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />
</RelativeLayout>