<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/colorFondos"
    app:cardCornerRadius="8dp"
    android:layout_marginBottom="16dp"
    android:id="@+id/card_view_alarma">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:id="@+id/etTituloAlarma"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/alarma2"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgEliminarAlarma"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="10"
                        android:clickable="true"
                        android:src="@drawable/ic_delete_black_24dp"
                        android:tint="@color/colorPrimaryDark" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fechaAlarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/fecha"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/etFechaAlarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:text="01/01/2019"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/numeroCreditos"
                        app:layout_constraintTop_toBottomOf="@+id/itemNotaNecesaria" />

                    <TextView
                        android:id="@+id/horaAlarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/hora"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/etHoraAlarma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:text="12:00:00 am"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        app:layout_constraintStart_toEndOf="@+id/numeroCreditos"
                        app:layout_constraintTop_toBottomOf="@+id/itemNotaNecesaria" />


                </LinearLayout>

            </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>